--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -113,12 +113,12 @@ border-bottom: 1px solid rgb(218, 216, 216);
 
 /* ------media query---- */
 @media (max-width: 1000px){
-    .menu-list ul{
+    .menu-list{
         position:fixed;
         /* right: 0; */
         top: 0;
         display: flex;
-        flex-direction: column;
+        /* flex-direction: column; */
         align-items: center;
         justify-content: center;
         background-color: #f2f3fa;
@@ -129,6 +129,12 @@ border-bottom: 1px solid rgb(218, 216, 216);
         right: -100%;
         /* z-index: 100; */
 
+    }
+    .menu-list ul{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
    
     .menu-list ul li{
